public/css/sujetTer.css
body{
    display: flex;
    flex-direction: column;
    background-image: url("../img/bg_opaque.png");
    background-size: cover;
}

div.listeSujet{
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    justify-content: center;

}

div.sujetTer{
    background: white;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    margin: 10px 10px 30px;
    justify-content: flex-end;
    box-shadow: 0 10px 10px 1px rgba(0,0,0,0.3);
}

div.element_sujetTer{
    flex-wrap: wrap;
    display: flex;
    flex-direction: row;
    margin: 4px;
}

div.param{
    font-weight: bold;
    margin-left: 20px;
    margin-right: 20px;
}

div.description_sujetTer{
    margin-left: 10px;
    margin-right: 10px;
    margin-bottom: 15px;
}

div.etudiantWarning{
    font-weight: 900;
}

h1{
    margin: 10px;
    text-align: center;
}

.modifbtn{
    display: flex;
    align-content: stretch;
    align-self: stretch;
}

a.btn-primary{
    flex-grow: 2;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}
button.btn-danger{
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
}

@media (min-width:400px){
    div.description_sujetTer{
        margin-left: 50px;
        margin-right: 50px;
    }
}

@media (min-width:1000px){
    div.listeSujet{
        width: 80%;
        align-self: center;
    }
}

